--- a/04.工具栏和菜单栏介绍/index.html
+++ b/04.工具栏和菜单栏介绍/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta charset="UTF-8">
     <title>Extjs实现工具栏和菜单栏</title>
     <!--引入extjs的基本案例-->
     <link rel="stylesheet" href="../lib/build/classic/theme-neptune/resources/theme-neptune-all.css">
@@ -14,6 +13,6 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    <div id="toolbar"></div>
+<div id="toolbar"></div>
 </body>
 </html>
