提交测试表单信息

--- a/04.工具栏和菜单栏介绍/index.html
+++ b/04.工具栏和菜单栏介绍/index.html
@@ -13,6 +13,8 @@
     <script src="./index.js"></script>
 </head>
 <body>
-<div id="toolbar"></div>
+    <div id="toolbar"></div>
+    <!--<button id="enabledBtn">启用菜单</button>-->
+    <!--<button id="disabledBtn">禁用菜单</button>-->
 </body>
 </html>
