--- a/05.表单及表单元素介绍/index.html
+++ b/05.表单及表单元素介绍/index.html
@@ -14,6 +14,6 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    <div id="toolbar"></div>
+    <div id="form"></div>
 </body>
 </html>
